--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,24 +11,6 @@
     android:orientation="vertical"
     tools:context="space.darkowlzz.sectiondividerview.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"/>
-
-    <space.darkowlzz.minimaldivider.MinimalDivider
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        minimaldivider:dividerLine_color="#F48024"
-        minimaldivider:topText_enabled="true"
-        minimaldivider:bottomText_enabled="true"
-        minimaldivider:topText_value="I am above the divider"
-        minimaldivider:bottomText_value="I am below the divider"
-        minimaldivider:dividerLine_width="100dp"
-        minimaldivider:dividerLine_height="10dp"
-        minimaldivider:dividerLine_marginTop="30dp"
-        minimaldivider:dividerLine_marginBottom="30dp"/>
-
     <space.darkowlzz.minimaldivider.MinimalDivider
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,7 +19,45 @@
         minimaldivider:dividerLine_color="@android:color/holo_green_dark"
         minimaldivider:topText_enabled="true"
         minimaldivider:topText_value="Yin"
+        minimaldivider:topText_style="@android:style/TextAppearance.Large"
         minimaldivider:bottomText_enabled="true"
-        minimaldivider:bottomText_value="Yang" />
-    
+        minimaldivider:bottomText_value="Yang"
+        minimaldivider:bottomText_style="@android:style/TextAppearance.Small"/>
+
+    <space.darkowlzz.minimaldivider.MinimalDivider
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        minimaldivider:topText_enabled="true"
+        minimaldivider:bottomText_enabled="true"
+        minimaldivider:topText_value="Sun"
+        minimaldivider:topText_size="10dp"
+        minimaldivider:bottomText_value="Moon"
+        minimaldivider:bottomText_size="4dp"
+        minimaldivider:dividerLine_width="220dp"/>
+
+    <space.darkowlzz.minimaldivider.MinimalDivider
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        minimaldivider:dividerLine_color="#F48024"
+        minimaldivider:topText_enabled="true"
+        minimaldivider:bottomText_enabled="true"
+        minimaldivider:topText_value="Above"
+        minimaldivider:topText_color="@android:color/holo_red_dark"
+        minimaldivider:bottomText_value="Below"
+        minimaldivider:bottomText_color="@android:color/holo_blue_light"
+        minimaldivider:dividerLine_width="100dp"
+        minimaldivider:dividerLine_height="10dp"
+        minimaldivider:dividerLine_marginTop="30dp"
+        minimaldivider:dividerLine_marginBottom="30dp"/>
+
+    <space.darkowlzz.minimaldivider.MinimalDivider
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:background="@android:color/holo_purple"
+        minimaldivider:dividerLine_color="@android:color/white"/>
+
 </LinearLayout>
