--- a/minimaldivider/src/main/res/layout/minimaldivider_layout.xml
+++ b/minimaldivider/src/main/res/layout/minimaldivider_layout.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
         android:id="@+id/topText"
@@ -25,4 +21,4 @@
         android:text="Below separator"
         android:layout_gravity="center_horizontal"/>
 
-</LinearLayout>
+</merge>
