Added robolectric tests.

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -26,10 +26,10 @@
         android:layout_marginBottom="15dp"
         minimaldivider:dividerLine_color="@android:color/holo_green_dark"
         minimaldivider:topText_enabled="true"
-        minimaldivider:topText_value="Yin"
+        minimaldivider:topText_value="@string/topText_value2"
         minimaldivider:topText_style="@android:style/TextAppearance.Large"
         minimaldivider:bottomText_enabled="true"
-        minimaldivider:bottomText_value="Yang"
+        minimaldivider:bottomText_value="@string/bottomText_value2"
         minimaldivider:bottomText_style="@android:style/TextAppearance.Small"
         minimaldivider:topImage_enabled="true"
         minimaldivider:topImage_source="@drawable/ic_sun"
@@ -47,9 +47,9 @@
         android:layout_margin="20dp"
         minimaldivider:topText_enabled="true"
         minimaldivider:bottomText_enabled="true"
-        minimaldivider:topText_value="Sun"
+        minimaldivider:topText_value="@string/topText_value3"
         minimaldivider:topText_size="10dp"
-        minimaldivider:bottomText_value="Moon"
+        minimaldivider:bottomText_value="@string/bottomText_value3"
         minimaldivider:bottomText_size="4dp"
         minimaldivider:dividerLine_width="220dp"/>
 
@@ -59,12 +59,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        minimaldivider:dividerLine_color="#F48024"
+        minimaldivider:dividerLine_color="@color/dividerLineColor4"
         minimaldivider:topText_enabled="true"
         minimaldivider:bottomText_enabled="true"
-        minimaldivider:topText_value="Above"
+        minimaldivider:topText_value="@string/topText_value4"
         minimaldivider:topText_color="@android:color/holo_red_dark"
-        minimaldivider:bottomText_value="Below"
+        minimaldivider:bottomText_value="@string/bottomText_value4"
         minimaldivider:bottomText_color="@android:color/holo_blue_light"
         minimaldivider:dividerLine_width="100dp"
         minimaldivider:dividerLine_height="10dp"
